--- a/app/assets/stylesheets/game.css.scss
+++ b/app/assets/stylesheets/game.css.scss
@@ -346,7 +346,7 @@ Messages
   position: relative;
   width: 100%;
 }
-.messages .messages-content {
+.messages .sent-messages {
   position: absolute;
   top: 0;
   left: 0;
@@ -538,3 +538,58 @@ Message Box
 .message-box .message-submit:hover {
   background: #1D7745;
 }
+
+/*--------------------
+Custom Srollbar
+--------------------*/
+.mCSB_scrollTools {
+  margin: 1px -3px 1px 0;
+  opacity: 0;
+}
+
+.mCSB_inside > .mCSB_container {
+  margin-right: 0px;
+  padding: 0 10px;
+}
+
+.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
+  background-color: rgba(0, 0, 0, 0.5) !important;
+}
+
+
+/*  scrollbar theme: "dark" */
+
+.mCS-dark.mCSB_scrollTools .mCSB_draggerRail {
+    background-color: #000; background-color: rgba(0,0,0,0.15);
+  }
+
+.mCS-dark.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar { 
+    background-color: #000; background-color: rgba(0,0,0,0.75);
+  }
+
+.mCS-dark.mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar { 
+  background-color: rgba(0,0,0,0.85);
+}
+
+.mCS-dark.mCSB_scrollTools .mCSB_dragger:active .mCSB_dragger_bar,
+.mCS-dark.mCSB_scrollTools .mCSB_dragger.mCSB_dragger_onDrag .mCSB_dragger_bar { 
+  background-color: rgba(0,0,0,0.9);
+}
+
+.mCS-dark.mCSB_scrollTools .mCSB_buttonUp {
+  background-position: -80px 0;
+}
+
+.mCS-dark.mCSB_scrollTools .mCSB_buttonDown {
+  background-position: -80px -20px;
+}
+
+.mCS-dark.mCSB_scrollTools .mCSB_buttonLeft {
+  background-position: -80px -40px;
+}
+
+.mCS-dark.mCSB_scrollTools .mCSB_buttonRight {
+  background-position: -80px -56px;
+}
+
+/* ---------------------------------------- */
