--- a/app/views/games/_chat_messaging.html.erb
+++ b/app/views/games/_chat_messaging.html.erb
@@ -27,7 +27,7 @@
     </figure>
   </div>
   <div class="messages">
-    <div class="sent-messages"></div>
+    <div class="sent-messages mCustomScrollbar update" data-mcs-theme="dark"></div>
   </div>
   <div class="message-box">
     <textarea type="text" class="message-input" placeholder="Type message..."></textarea>
@@ -36,20 +36,83 @@
 
   <script>
     $(function() {
-      $( '.message-submit' ).click(function() {
-        var message = {
-          "text" : $( '.message-input' ).val()
+      // grab message content
+      $( '.message-submit' ).click(sendMessage);
+
+      $(window).on('keydown', function(e) {
+        if (e.which == 13) {
+          sendMessage();
+          return false;
+        }
+      });
+
+      function sendMessage() {
+        msg = $('.message-input').val();
+        if ($.trim(msg) == '') {
+          return false;
         }
 
+        var message = {
+          "text" : msg,
+          "date" : setDate()
+        };
+
+        // request to Pusher
         $.post( "<%= message_url(@game) %>", message, function( data ) {
           console.log( data );
         });
-      });
+        $('.message-input').val(null);
+      }
+
+      function setDate(){
+        var d = new Date();
+        var m = d.getMinutes();
+        return String(d.getHours()) + ':' + m;
+      }
     });
+
+    var $messages = $('.sent-messages');
+    
+    function updateScrollbar() {
+      $messages.mCustomScrollbar("update").mCustomScrollbar('scrollTo', 'bottom', {
+        scrollInertia: 10,
+        timeout: 0
+      });
+    }
+
+    $messages.mCustomScrollbar();
+    
+
+    function insertMessage() {
+      msg = $('.message-input').val();
+      if ($.trim(msg) == '') {
+        return false;
+      }
+      $('<div class="message message-personal">' + msg + '</div>').appendTo($('.mCSB_container')).addClass('new');
+      setDate();
+      // $('.message-input').val(null);
+      updateScrollbar();
+    }
+
+    // $(function() {
+    //   $('.scroll-pane').jScrollPane();
+    // });
+
+    // $('.message-submit').click(function() {
+    //   insertMessage();
+    // });
   </script>
 
+  <script type="text/javascript">
+    (function($){
+        $(window).on("load",function(){
+            $(".sent-messages").mCustomScrollbar();
+        });
+      })
+    (jQuery);
+  </script>
 </div>
-<div class="bg"></div>
+<!-- <div class="bg"></div> -->
 
 <!-- The CSS class messages-content has been changed to sent-messages 
 
