--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Pusher: allows for automatic updates -->
   <script src="https://js.pusher.com/3.1/pusher.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.concat.min.js"></script>
 </head>
 
 <body>
@@ -58,6 +59,7 @@
         </ul>
     </div><!-- /.navbar-collapse -->
   </nav>
+  
   <% if notice %>
     <p class="notice"><%= notice %></p>
   <% elsif alert %>
