commit for heroku

--- a/app/assets/stylesheets/leader_boards.scss
+++ b/app/assets/stylesheets/leader_boards.scss
@@ -2,7 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.container .leaderboard {
+.container td.leaderboard {
   border: solid 2px;
   padding: 10px;
+  background-color: white;
 }
