Add vertical scroll-bar to messaging

--- a/app/assets/stylesheets/game.css.scss
+++ b/app/assets/stylesheets/game.css.scss
@@ -567,13 +567,8 @@ Custom Srollbar
     background-color: #000; background-color: rgba(0,0,0,0.75);
   }
 
-.mCS-dark.mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar { 
+.mCS-dark.mCSB_scrollTools .mCSB_dragger:hover { 
   background-color: rgba(0,0,0,0.85);
-}
-
-.mCS-dark.mCSB_scrollTools .mCSB_dragger:active .mCSB_dragger_bar,
-.mCS-dark.mCSB_scrollTools .mCSB_dragger.mCSB_dragger_onDrag .mCSB_dragger_bar { 
-  background-color: rgba(0,0,0,0.9);
 }
 
 .mCS-dark.mCSB_scrollTools .mCSB_buttonUp {
@@ -593,3 +588,9 @@ Custom Srollbar
 }
 
 /* ---------------------------------------- */
+
+.scroll-pane
+{
+  width: 100%;
+  overflow: auto;
+}
