Update the scroll-bar for each message sent

--- a/app/assets/stylesheets/game.css.scss
+++ b/app/assets/stylesheets/game.css.scss
@@ -589,8 +589,7 @@ Custom Srollbar
 
 /* ---------------------------------------- */
 
-.scroll-pane
-{
+.scroll-pane {
   width: 100%;
   overflow: auto;
 }
