--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Pusher: allows for automatic updates -->
   <script src="https://js.pusher.com/3.1/pusher.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.concat.min.js"></script>
-  <script src="/assets/jquery.mCustomScrollbar.concat.min.js"></script>
+<!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.concat.min.js"></script> -->
+<!--   <script src="/assets/jquery.mCustomScrollbar.concat.min.js"></script> -->
 </head>
 
 <body>
