--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <!-- Pusher: allows for automatic updates -->
   <script src="https://js.pusher.com/3.1/pusher.min.js"></script>
 <!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.concat.min.js"></script> -->
-<!--   <script src="/assets/jquery.mCustomScrollbar.concat.min.js"></script> -->
+  <script src="/assets/jquery.mCustomScrollbar.concat.min.js"></script>
 </head>
 
 <body>
