--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,6 +6,14 @@
   <% end %>
 </h2>
 
+<div class="col-xs-10 col-xs-offset-1">
+  <%= link_to "Concede the Game", concede_game_path(@game, conceding_user: current_user.id), class: 'btn btn-primary pull-left', remote: true %>
+  
+  <div id="changeable_button">
+    <%= link_to "Suggest a draw", draw_game_path(@game, draw_requesting_user: current_user.id), class: 'btn btn-primary draw-btn pull-right', remote: true %>
+  </div>
+</div>
+
 <div class="container table-surface">
   <div class="player-turn text-center"></div>
   <div class="board-booyah-box col-lg-6 col-lg-offset-3 col-sm-10 
@@ -72,6 +80,24 @@
         });
       // }
     });
+
+    //when one player concedes the game, both players are redirected to a new page. The setTimeout is necessary for Chrome users (without it the redirect does not occur).The query string added at the end of the url allows the passing of data (the id of the player that conceded the game) via the url to be used in concede.html.erb
+   channel.bind('game_conceded', function(data) {
+    setTimeout(function(){
+      window.location.href = '<%= @game.id %>' + '/concede' +'?conceding_player=' + data.player_id;}, 500);
+    });
+
+    //when  both players decide to draw the game, they are redirected to a new page. The setTimeout is necessary for Chrome users (without it the redirect does not occur)
+   channel.bind('game_drawn', function(data) {
+    setTimeout(function(){
+      window.location.href = '<%= @game.id %>' + '/draw';},500);
+    });
+
+   //after one player suggests a draw, the message of the "draw" button is updated with the html of a partial
+   channel.bind('draw_requested', function(data) {
+    alert("A game draw request has been made.");
+    $("#changeable_button").load(window.location.href + "/change_button_version #target");
+  });
 
     /*
     //Absolutely awful hack to make messages display:
