--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,63 +6,96 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Custom Fonts 
+  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
+  <!--   main font used throughout -->
+  <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <!-- Branding -->
+  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <!-- iconography -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+
   <!-- Pusher: allows for automatic updates -->
   <script src="https://js.pusher.com/3.1/pusher.min.js"></script>
+<!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.concat.min.js"></script> -->
+<!--   <script src="/assets/jquery.mCustomScrollbar.concat.min.js"></script> -->
 </head>
+
 <body>
 
-  <nav class="navbar navbar-default">
-    <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display and Desktop -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">LetMeCheck</a>
-      </div>
+  <!-- Navigation -->
+  <nav class="navbar navbar-custom" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+              <i class="fa fa-bars"></i>
+          </button>
+          <a class="navbar-brand page-scroll" href="/games/new">
+            <i class="fa fa-play-circle"></i>  
+            <span class="light">Play</span> Let Me Check
+          </a>
+        </div>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><%= link_to 'All Games', games_path %></li>
-      </ul>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+          <ul class="nav navbar-nav">
+            <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+            <li class="hidden">
+              <a href="#page-top"></a>
+            </li>
+            <li><%= link_to 'All Games', games_path %></li>
+            <li><%= link_to "Leaderboard", leader_boards_path %></li>
+            <% if (!user_signed_in?) %>
+              <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+              <li><%= link_to 'Sign In', new_user_session_path %></li>
+            <% else %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                  <%= current_user.username %><span class="caret"></span></a>
+
+                <ul class="dropdown-menu">
+                  <li><a href="#">Summary</a></li>
+                  <li><a href="#">Account Settings</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
+                </ul>
+              </li>
+            <% end %>
 
 
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Leaderboard", leader_boards_path %></li>
-        <li><%= link_to 'New Game', new_game_path %></li>
-        <% if (!user_signed_in?) %>
-        <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-        <li><%= link_to 'Sign In', new_user_session_path %></li>
-        <% else %>
 
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            <%= current_user.username %><span class="caret"></span></a>
-
-          <ul class="dropdown-menu">
-            <li><a href="#">Summary</a></li>
-            <li><a href="#">Account Settings</a></li>
-            <li role="separator" class="divider"></li>
-            <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
+            <!-- <li>
+                <a class="page-scroll" href="#about">About</a>
+            </li>
+            <li>
+                <a class="page-scroll" href="#download">Download</a>
+            </li>
+            <li>
+                <a class="page-scroll" href="#contact">Contact</a>
+            </li> -->
           </ul>
-
-        </li>
-
-      <% end %>
-
-        </ul>
-    </div><!-- /.navbar-collapse -->
+        </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container -->
   </nav>
+
+  
+  
   <% if notice %>
     <p class="notice"><%= notice %></p>
   <% elsif alert %>
     <p class="alert"><%= alert %></p>
   <% end %>
+
   <%= yield %>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container text-center">
+      <!-- <p>Footer Placeholder</p> -->
+    </div>
+  </footer>
 
 </body>
 </html>
