Create username column

--- a/app/views/leader_boards/index.html.erb
+++ b/app/views/leader_boards/index.html.erb
@@ -8,7 +8,7 @@
   <% @users.each do |user| %>
   <tr>
 
-     <td class="leaderboard" ><%= user.email %></td>
+     <td class="leaderboard" ><%= user.username %></td>
      <td class="leaderboard"><%= user.wins %></td>
      <td class="leaderboard"><%= user.losses %></td>
   </tr>
