--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,7 +7,7 @@
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
     <div class="form-group">
       <p><%= f.label :username %><br />
-       <%= f.text_field :username %></p>
+       <%= f.text_field :username, class: "form-control" %></p>
    </div>
       <div class="form-group">
         <%= f.label :email %>
