Update the team info

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -172,7 +172,7 @@
                     
                     <div class="team-item-image">
                         
-                        <%= image_tag 'iv_linked.jpg', class: 'img-responsive' %>
+                        <%= image_tag 'fu_linked.JPG', class: 'img-responsive' %>
                         
                         <div class="team-item-detail">
                             
