--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -62,7 +62,7 @@
                           <div class="team-social-links">
                               <a href="https://github.com/ilyakrasnov" target="_blank"><i class="fa fa-github"></i></a>
                               <a href="https://de.linkedin.com/in/ikrasnov" target="_blank"><i class="fa fa-linkedin"></i></a>
-                              <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+                              <a href="https://twitter.com/ilyakrasnov" target="_blank"><i class="fa fa-twitter"></i></a>
                           </div>
                             
                         </div>
@@ -267,7 +267,7 @@
                           <div class="team-social-links">
                             <a href="https://github.com/bennypaulino" target="_blank"><i class="fa fa-github"></i></a>
                             <a href="https://www.linkedin.com/in/benny-paulino-504b96113" target="_blank"><i class="fa fa-linkedin"></i></a>
-                            <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+                            <a href="https://twitter.com/i_see_in_code" target="_blank"><i class="fa fa-twitter"></i></a>
                           </div>
                             
                         </div>
@@ -298,12 +298,36 @@
 <!-- Tools Section -->
 <section id="tools" class="content-section text-center">
   <div class="tools-section">
-    <div class="container frosty">
-        <div class="col-lg-8 col-lg-offset-2">
-          <h2>The Toolbox</h2>
-          <p>You can see the code for yourself at GitHub.</p>
-          <a href="https://github.com/letmecheck/app" class="btn btn-default btn-lg">See The Code</a>
-        </div>
+    <div class="row text-center">
+      <h2>A small sample of what's in the toolbox...</h2>
+      <br>
+      <div class="col-md-4 logos">
+        <h3>Version Control</h3>
+        <%= image_tag 'github-logos-278px.png', class: 'img-responsive center-block' %>
+      </div>
+      <div class="col-md-4 logos">
+        <h3>Continuous Integration</h3>
+        <%= image_tag 'TravisCI-319x100.png', class: 'img-responsive center-block' %>
+      </div>
+      <div class="col-md-4 logos">
+        <h3>Code Analyzer</h3>
+        <%= image_tag 'rubo-logo-horizontal_110x344.png', class: 'img-responsive center-block' %>
+      </div>
+    </div>
+
+    <div class="row text-center" id="tools-row2">
+      <div class="col-md-4 logos">
+        <h3>Testing &amp; Deployment</h3>
+        <%= image_tag 'heroku_297x100.png', class: 'img-responsive center-block' %>
+      </div>
+      <div class="col-md-4 logos">
+        <h3>Project Management</h3>
+        <%= image_tag 'trello-logo-blue_358x110.png', class: 'img-responsive center-block' %>
+      </div>
+      <div class="col-md-4 logos">
+      <h3>Communication</h3>
+        <%= image_tag 'slack_200x427.png', class: 'img-responsive center-block slack-logo' %>
+      </div>
     </div>
   </div>
 </section>
