Add more content for the landing page
Add styling for devise forms.

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -217,7 +217,7 @@
                         
                         <div class="team-item-detail">
                             
-<!--                      <h4 class="team-item-h">Hi to all!</h4>
+                          <!--  <h4 class="team-item-h">Hi to all!</h4>
                           
                           <p>
                               Adipiscing elit curabitur eu&nbsp;adipiscing lacus eu&nbsp;adipiscing lacus, a&nbsp;iaculis diam. 
@@ -258,7 +258,7 @@
                         
                         <div class="team-item-detail">
                             
-<!--                      <h4 class="team-item-h">Hi to all!</h4>
+                          <!--  <h4 class="team-item-h">Hi to all!</h4>
                             
                           <p>
                               Adipiscing elit curabitur eu&nbsp;adipiscing lacus eu&nbsp;adipiscing lacus, a&nbsp;iaculis diam. 
@@ -293,6 +293,39 @@
         <!-- End Team Grid -->
       </div>
     </div>
+</section>
+
+<!-- Logic Section -->
+<section id="logic" class="container content-section text-center">
+  <div class="logic-section">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1 align-center">
+
+        <!-- Section Titles -->
+        <h1 class="section-title mb-10">
+            The Business Logic
+        </h1>
+        <h2 class="section-heading">
+            A peek behind the scenes...
+        </h2>
+        <!-- End Section Titles -->
+
+        <div class="col-sm-8  align-center">
+          <%= image_tag 'pawn_logic.png', class: 'img-responsive' %>
+        </div>
+        <div class="col-sm-4  align-center">
+          <div class="section-line mb-50 mb-xs-30"></div>
+                
+            <!-- Section Text -->
+            <div class="section-text mb-80 mb-xs-50">
+              Every chess piece has their own move. Some pieces can perform additional moves under special circumstances such as en passant for the pawn; or castling, which involves the king and rook. 
+            </div>
+            <!-- End Section Text -->  
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
 <!-- Tools Section -->
