--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -340,6 +340,11 @@ a:focus {
   margin-bottom: 4rem;
 }
 
+.logic-section .section-text {
+  text-align: left;
+  padding-top: 2rem;
+}
+
 .frosty {
   background: rgba(0,0,0, 0.8);
   border-radius: 6px;
@@ -443,3 +448,22 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
+
+/* ------ Styling for the games#new page ------- */
+
+.new-game input[type="text"] {
+  margin-left: 2rem;
+  color: #000;
+}
+
+
+/* ------ Styling for the users#sign_up page ------- */
+.new_user input {
+  color: #000;
+}
+
+.devise-form {
+  padding-left: 3rem;
+}
+
+/* ------ Styling for the users#sign_up page ------- */
