--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="new-game container">
   <h1>A Form for New Game</h1>
   <%= simple_form_for @game do |f| %>
     <%= f.input :name %>
