--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -3,7 +3,7 @@
   <div class="panel-heading">
     <h4><%= t('.resend_confirmation_instructions', :default => 'Resend confirmation instructions') %></h4>
   </div>
-  <div class="panel-body">
+  <div class="panel-body devise-form">
     <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post, role: "form" }) do |f| %>
       <div class="form-group">
         <%= f.label :email %>
@@ -12,7 +12,13 @@
 
       <%= f.submit t('.resend_confirmation_instructions', :default => 'Resend confirmation instructions'), class: "btn btn-primary" %>
     <% end %>
+    <br>
+    <br>
   </div>
 </div>
 
-<%= render "devise/shared/links" %>
+<br>
+<br>
+<div class='devise-form'>
+  <%= render "devise/shared/links" %>
+</div>
