--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,7 +3,7 @@
   <div class="panel-heading">
     <h4><%= t('.forgot_your_password', :default => 'Forgot your password?') %></h4>
   </div>
-  <div class="panel-body">
+  <div class="panel-body devise-form">
     <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, role: "form" }) do |f| %>
       <div class="form-group">
         <%= f.label :email %>
@@ -12,6 +12,12 @@
 
       <%= f.submit t('.send_me_reset_password_instructions', :default => "Send me reset password instructions"), class: "btn btn-primary" %>
     <% end %>
+    <br>
+    <br>
   </div>
 </div>
-<%= render "devise/shared/links" %>
+<br>
+<br>
+<div class='devise-form'>
+  <%= render "devise/shared/links" %>
+</div>
