--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,7 @@
   <div class="panel-heading">
     <h4><%= t('.title', :resource => resource_class.model_name.human , :default => "Edit #{resource_name.to_s.humanize}") %></h4>
   </div>
-  <div class="panel-body">
+  <div class="panel-body devise-form">
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
     <div class="form-group">
       <p><%= f.label :username %><br />
@@ -27,6 +27,8 @@
       </div>
       <%= f.submit t('.update', :default => "Update"), class: "btn btn-primary" %>
     <% end %>
+    <br>
+    <br>
   </div>
 </div>
 
