--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,11 +6,11 @@
   <% end %>
 </h2>
 
-<div class="col-xs-10 col-xs-offset-1">
-  <%= link_to "Concede the Game", concede_game_path(@game, conceding_user: current_user.id), class: 'btn btn-primary pull-left', remote: true %>
+<div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 concede-draw">
+  <%= link_to "Concede the Game", concede_game_path(@game, conceding_user: current_user.id), class: 'btn-sm btn-primary pull-left', remote: true %>
   
   <div id="changeable_button">
-    <%= link_to "Suggest a draw", draw_game_path(@game, draw_requesting_user: current_user.id), class: 'btn btn-primary draw-btn pull-right', remote: true %>
+    <%= link_to "Suggest a draw", draw_game_path(@game, draw_requesting_user: current_user.id), class: 'btn-sm btn-primary draw-btn pull-right', remote: true %>
   </div>
 </div>
 
