Continue refining landing page & devise pages
* Provide a link to get back to the home page in the upper left corner
* Add enhancements for the About section on the landing page
* Change the background to a gradient for the Tools section
* Add media queries for mobile devices
* Add a background to the devise form pages

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -49,7 +49,7 @@
                     
                     <div class="team-item-image">
 
-                      <%= image_tag 'ik_linked.jpg', class: 'img-responsive' %>
+                      <%= image_tag 'ik_linked.jpg', class: 'img-responsive center-block' %>
                         
                         <div class="team-item-detail">
                             
@@ -90,7 +90,7 @@
                     
                     <div class="team-item-image">
                         
-                        <%= image_tag 'sm_linked.jpg', class: 'img-responsive' %>
+                        <%= image_tag 'sm_linked.jpg', class: 'img-responsive center-block' %>
                         
                         <div class="team-item-detail">
                             
@@ -131,7 +131,7 @@
                     
                     <div class="team-item-image">
                         
-                        <%= image_tag 'pv_linked.jpg', class: 'img-responsive' %>
+                        <%= image_tag 'pv_linked.jpg', class: 'img-responsive center-block' %>
                         
                         <div class="team-item-detail">
                             
@@ -172,7 +172,7 @@
                     
                     <div class="team-item-image">
                         
-                        <%= image_tag 'fu_linked.JPG', class: 'img-responsive' %>
+                        <%= image_tag 'fu_linked.JPG', class: 'img-responsive center-block' %>
                         
                         <div class="team-item-detail">
                             
@@ -213,7 +213,7 @@
                     
                     <div class="team-item-image">
                         
-                        <%= image_tag 'es_linked.jpg', class: 'img-responsive' %>
+                        <%= image_tag 'es_linked.jpg', class: 'img-responsive center-block' %>
                         
                         <div class="team-item-detail">
                             
@@ -254,7 +254,7 @@
                     
                     <div class="team-item-image">
                         
-                        <%= image_tag 'bp_linked.jpg', class: 'img-responsive' %>
+                        <%= image_tag 'bp_linked.jpg', class: 'img-responsive center-block' %>
                         
                         <div class="team-item-detail">
                             
@@ -370,7 +370,7 @@
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
       <h2>See the Code</h2>
-      <p>See how it all works under the hood!</p>
+      <p>Have a look under the hood, and see how it all works!</p>
       <ul class="list-inline banner-social-buttons">
         <li>
             <!-- <a href="https://social-link-for-Twitter" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a> -->
