--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -395,6 +395,11 @@ a:focus {
   color: #000;
 }
 
+.tools-section .row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 #tools-row2 {
   padding-top: 8rem;
 }
