--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -385,4 +385,4 @@
     </div>
   </div>
 </section>
-<script type="text/javascript" src="js/wow.min.js"></script>
+<!-- <script type="text/javascript" src="js/wow.min.js"></script> -->
