--- a/app/assets/stylesheets/leader_boards.scss
+++ b/app/assets/stylesheets/leader_boards.scss
@@ -6,4 +6,30 @@
   border: solid 2px;
   padding: 10px;
   background-color: white;
+  color: #2b755a;
+}
+
+.lb-table {
+   width: 100%;
+}
+
+.lb-user {
+  padding-left: 1em;
+}
+
+.lb-wins-losses-heading {
+  text-align: center;
+  width: 15%;
+}
+
+.lb-username {
+  font-weight: 800;
+}
+
+.wins-losses-column {
+  text-align: center;
+}
+
+#wins-column {
+  color: #000;
 }
