--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,11 +7,11 @@
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { role: "form" }) do |f| %>
     <div class="form-group">
       <p><%= f.label :username %><br />
-       <%= f.text_field :username, class: "form-control" %></p>
+       <%= f.text_field :username, autofocus: true, class: "form-control" %></p>
    </div>
       <div class="form-group">
         <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: "form-control" %>
+        <%= f.email_field :email, class: "form-control" %>
       </div>
       <div class="form-group">
         <%= f.label :password %><br />
